Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,25 +46,13 @@
 <a id="3-supported-diagrams" class="anchor" href="#3-supported-diagrams" aria-hidden="true"><span class="octicon octicon-link"></span></a>3. Supported Diagrams</h4>
 
 <ul>
-<li><a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki/3.1.-Usecase-Diagram">Usecase Diagram</a></li>
-<li><a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki/3.2.-Class-Diagram">Class Diagram</a></li>
-<li><a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki/3.3.-Sequence-Diagram">Sequence Diagram</a></li>
-<li><a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki/3.4.-Activity-Diagram">Activity Diagram</a></li>
-<li><a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki/3.5.-Component-Diagram">Component Diagram</a></li>
-</ul>
-
-<blockquote>
-<p><img src="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/raw/master/wiki_files/class_diagram1.jpg" alt=""></p>
-</blockquote>
-
-<h4>
-<a id="4-guidance" class="anchor" href="#4-guidance" aria-hidden="true"><span class="octicon octicon-link"></span></a>4. Guidance</h4>
-
-<ul>
-<li>
-<a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki/0.-Quick-Guide">Quick Guide</a> </li>
-<li><a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki">User Manual</a></li>
-<li><a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/blob/master/wiki_files/dev_guide.pdf">Dev. Guide</a></li>
+<li>Usecase Diagram</li>
+<li>Class Diagram</li>
+<li>Sequence Diagram</li>
+<li>Activity Diagram</li>
+<li>Component Diagram
+&gt; <img src="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/raw/master/wiki_files/class_diagram1.jpg" alt="">
+</li>
 </ul>
 
 <hr>
