Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
 <li>Class Diagram</li>
 <li>Sequence Diagram</li>
 <li>Activity Diagram</li>
-<li>Component Diagram
-&gt; <img src="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/raw/master/wiki_files/class_diagram1.jpg" alt="">
-</li>
+<li>Component Diagram</li>
 </ul>
+
+<blockquote>
+<p><img src="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/raw/master/wiki_files/class_diagram1.jpg" alt=""></p>
+</blockquote>
 
 <hr>
 
