Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
 <p><img src="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/raw/master/wiki_files/class_diagram1.jpg" alt=""></p>
 </blockquote>
 
+<h4>
+<a id="4-guidance" class="anchor" href="#4-guidance" aria-hidden="true"><span class="octicon octicon-link"></span></a>4. Guidance</h4>
+
+<ul>
+<li>
+<a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki/00.-Quick-Guide">Quick Guide (Installation and Execution)</a> : <a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/blob/master/wiki_files/NEXCORE%20UML%20Modeler_Quick%20Guide.pptx">Download</a>
+</li>
+<li><a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki">User Manual</a></li>
+<li>
+<a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/releases/download/v2.0/NEXCORE.UML.Modeler_Developer.Guide.pptx">Developer Guide</a><br>
+</li>
+</ul>
+
 <hr>
 
 <p><a href="http://nexcore.skcc.com/ko/"><img src="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/raw/master/wiki_files/top_nexcore.gif" alt="NEXCORE"></a>  is a trademark of SK Holdings Co. Ltd.</p>
