Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <ul>
 <li>
-<a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki/00.-Quick-Guide">Quick Guide (Installation and Execution)</a> : <a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/blob/master/wiki_files/NEXCORE%20UML%20Modeler_Quick%20Guide.pptx">Download</a>
+<a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki/00.-Quick-Guide">Quick Guide</a>(Installation and Execution) : <a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/blob/master/wiki_files/NEXCORE%20UML%20Modeler_Quick%20Guide.pptx">Download</a>
 </li>
 <li><a href="https://github.com/SK-HOLDINGS-CC/NEXCORE-UML-Modeler/wiki">User Manual</a></li>
 <li>
