--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <li>
 <a href="http://cc.sk.com/">SK Holdings C&amp;C</a>(구 SK C&amp;C)에서 개발한 UML 모델링 툴이며, UML 2.1을 지원</li>
 <li>어플리케이션의 구조, 행위, 아키텍처 및 비즈니스 프로세스 모델링 기능  제공</li>
-<li>상용 라이브러리를 사용하는 용어관리, 산출물생성 기능을 제거하고, Apache License 2.0으로 Open Source화한 버전을 제공</li>
+<li>상용 라이브러리를 사용하는 용어관리, 산출물생성 기능을 제거하고, Eclipse Public License - v 1.0으로 Open Source화한 버전을 제공</li>
 </ul>
 
 <h4>
